bad/invalid_cast_type_bool_literal.example_compiler_output
ERROR
[1mbad/invalid_cast_type_bool_literal.lat:3:6: [1;31merror: [0;1minvalid expression: expected class or array type as the cast type[m
    (true)null == null;
     [1;32m^[m
